feat(auth): support password and wechat login
